...
    <string name="kaleyra_chat_no_messages_subtitle">Send a message to initiate communication</string>
    <string name="kaleyra_chat_group_title">Group chat</string>
    <string name="kaleyra_chat">Chat</string>

    <!-- Call -->
    <string name="kaleyra_call_show_buttons">Show buttons</string>
    <string name="kaleyra_close">Close</string>
    <string name="kaleyra_call_status_connecting">Connecting &#8230;</string>
    <string name="kaleyra_call_status_dialing">Calling &#8230;</string>
    <plurals name="kaleyra_call_incoming_status_ringing">
        <item quantity="one">Is calling you &#8230;</item>
        <item quantity="other">Are calling you &#8230;</item>
    </plurals>
...
    <string name="kaleyra_fileshare_miscellaneous">Generic file</string>
    <string name="kaleyra_fileshare_media">Media file</string>
    <string name="kaleyra_fileshare_archive">Archive file</string>
    <string name="kaleyra_fileshare_cancel">Cancel</string>
    <string name="kaleyra_fileshare_download_descr">Start download</string>
    <string name="kaleyra_fileshare_success">File shared</string>
    <string name="kaleyra_fileshare_retry">Retry</string>
    <string name="kaleyra_no_file_shared">Still no file shared &#8230;</string>
    <string name="kaleyra_click_to_share_file">Click on “+” button to start sharing documents and images</string>
    <string name="kaleyra_write_permission_dialog_descr">Memory permission needed to download files</string>
    <string name="kaleyra_write_permission_dialog_title">Memory permission denied</string>
    <string name="kaleyra_button_ok">Ok</string>
    <string name="kaleyra_fileshare_chooser_title">Choose an application</string>
...

    <string name="kaleyra_user_message_pin">Pin</string>
    <string name="kaleyra_users_avatars_overflow" translatable="false">+%1$d</string>

    <!-- SIGNATURE -->
    <string name="kaleyra_sign_documents">Sign</string>
    <string name="kaleyra_signature_state_pending">Pending</string>
    <string name="kaleyra_signature_state_signing">Signing</string>
    <string name="kaleyra_signature_state_completed">Completed</string>
    <string name="kaleyra_signature_state_failed">Sign error</string>
    <string name="kaleyra_signature_sign">Sign</string>
    <string name="kaleyra_signature_no_documents_shared">No documents shared…</string>
    <string name="kaleyra_signature_no_documents_shared_found_title">No documents…</string>
    <string name="kaleyra_signature_no_documents_shared_found_subtitle">The search returned no results</string>
    <string name="kaleyra_signature_new_practice_available">A new practice is available</string>
    <string name="kaleyra_strings_action_search">Search…</string>
    <string name="kaleyra_strings_action_clear">Clear</string>

</resources>

