...
import com.kaleyra.video_sdk.theme.KaleyraTheme
import java.util.UUID

/**
 * Sign Documents Item Tag
 */
const val SignDocumentsItemTag = "FileShareItemTag"

/**
 * Sign Document Item Divider Tag
 */
const val SignDocumentsItemDividerTag = "FileShareItemDividerTag"
private val ContentBottomPadding = 72.dp
...
