...
        <item name="kaleyra_rootLayoutStyle">@style/KaleyraCollaborationSuiteUI.Glass.BottomActionItem.RootLayout.ThirdItem.ChatMenu</item>
        <item name="kaleyra_labelStyle">@style/KaleyraCollaborationSuiteUI.TextView.GlassLabel.ThirdItemChatMenu</item>
    </style>

    <style name="KaleyraCollaborationSuiteUI.Glass.BottomActionItem.RootLayout.ThirdItem.ChatMenu" parent="KaleyraCollaborationSuiteUI.Glass.BottomActionItem.RootLayout.ThirdItem">
        <item name="android:clickable">true</item>
        <item name="android:contentDescription">@string/kaleyra_strings_action_close</item>
    </style>

    <style name="KaleyraCollaborationSuiteUI.TextView.GlassLabel.ThirdItemChatMenu" parent="KaleyraCollaborationSuiteUI.TextView.GlassLabel">
        <item name="android:text">@string/kaleyra_strings_action_close</item>
    </style>

...
