...
import com.kaleyra.video_sdk.R
import com.kaleyra.video_sdk.common.preview.MultiConfigPreview
import com.kaleyra.video_sdk.common.topappbar.TopAppBar
import com.kaleyra.video_sdk.extensions.ModifierExtensions.highlightOnFocus
import com.kaleyra.video_sdk.theme.KaleyraTheme

const val SearchInputTag = "SearchInputTag"

@Composable
internal fun ComponentAppBar(
    modifier: Modifier = Modifier,
    title: String,
    onBackPressed: () -> Unit,
    enableSearch: Boolean = false,
    actions: @Composable (RowScope.() -> Unit) = { if (!enableSearch) Spacer(Modifier.width(56.dp)) },
    scrollBehavior: TopAppBarScrollBehavior? = TopAppBarDefaults.pinnedScrollBehavior(),
    scrollableState: ScrollableState? = null,
    isLargeScreen: Boolean = false,
...
